test_data/typeerror/core-40034.py
config = to_process.popleft()
condition = config[CONF_CONDITION]